@@ -2,7 +2,6 @@ GNUTLS_3_4@GNUTLS_3_4
 GNUTLS_3_6_0@GNUTLS_3_6_0
 GNUTLS_3_6_2@GNUTLS_3_6_2
 GNUTLS_3_6_3@GNUTLS_3_6_3
-GNUTLS_3_6_xx@GNUTLS_3_6_xx
 _gnutls_global_init_skip@GNUTLS_3_4
 gnutls_aead_cipher_decrypt@GNUTLS_3_4
 gnutls_aead_cipher_deinit@GNUTLS_3_4
@@ -42,7 +41,7 @@ gnutls_certificate_free_crls@GNUTLS_3_4
 gnutls_certificate_free_keys@GNUTLS_3_4
 gnutls_certificate_get_crt_raw@GNUTLS_3_4
 gnutls_certificate_get_issuer@GNUTLS_3_4
-gnutls_certificate_get_ocsp_expiration@GNUTLS_3_6_xx
+gnutls_certificate_get_ocsp_expiration@GNUTLS_3_6_3
 gnutls_certificate_get_openpgp_crt@GNUTLS_3_4
 gnutls_certificate_get_openpgp_key@GNUTLS_3_4
 gnutls_certificate_get_ours@GNUTLS_3_4
@@ -58,11 +57,11 @@ gnutls_certificate_set_dh_params@GNUTLS_3_4
 gnutls_certificate_set_flags@GNUTLS_3_4
 gnutls_certificate_set_key@GNUTLS_3_4
 gnutls_certificate_set_known_dh_params@GNUTLS_3_4
-gnutls_certificate_set_ocsp_status_request_file2@GNUTLS_3_6_xx
+gnutls_certificate_set_ocsp_status_request_file2@GNUTLS_3_6_3
 gnutls_certificate_set_ocsp_status_request_file@GNUTLS_3_4
 gnutls_certificate_set_ocsp_status_request_function2@GNUTLS_3_4
 gnutls_certificate_set_ocsp_status_request_function@GNUTLS_3_4
-gnutls_certificate_set_ocsp_status_request_mem@GNUTLS_3_6_xx
+gnutls_certificate_set_ocsp_status_request_mem@GNUTLS_3_6_3
 gnutls_certificate_set_openpgp_key@GNUTLS_3_4
 gnutls_certificate_set_openpgp_key_file2@GNUTLS_3_4
 gnutls_certificate_set_openpgp_key_file@GNUTLS_3_4
@@ -73,7 +72,7 @@ gnutls_certificate_set_openpgp_keyring_mem@GNUTLS_3_4
 gnutls_certificate_set_params_function@GNUTLS_3_4
 gnutls_certificate_set_pin_function@GNUTLS_3_4
 gnutls_certificate_set_retrieve_function2@GNUTLS_3_4
-gnutls_certificate_set_retrieve_function3@GNUTLS_3_6_xx
+gnutls_certificate_set_retrieve_function3@GNUTLS_3_6_3
 gnutls_certificate_set_retrieve_function@GNUTLS_3_4
 gnutls_certificate_set_trust_list@GNUTLS_3_4
 gnutls_certificate_set_verify_flags@GNUTLS_3_4
@@ -188,7 +187,7 @@ gnutls_encode_rs_value@GNUTLS_3_6_0
 gnutls_error_is_fatal@GNUTLS_3_4
 gnutls_error_to_alert@GNUTLS_3_4
 gnutls_est_record_overhead_size@GNUTLS_3_4
-gnutls_ext_get_current_msg@GNUTLS_3_6_xx
+gnutls_ext_get_current_msg@GNUTLS_3_6_3
 gnutls_ext_get_data@GNUTLS_3_4
 gnutls_ext_get_name@GNUTLS_3_4
 gnutls_ext_register@GNUTLS_3_4
@@ -289,7 +288,7 @@ gnutls_ocsp_req_set_extension@GNUTLS_3_4
 gnutls_ocsp_req_set_nonce@GNUTLS_3_4
 gnutls_ocsp_resp_check_crt@GNUTLS_3_4
 gnutls_ocsp_resp_deinit@GNUTLS_3_4
-gnutls_ocsp_resp_export2@GNUTLS_3_6_xx
+gnutls_ocsp_resp_export2@GNUTLS_3_6_3
 gnutls_ocsp_resp_export@GNUTLS_3_4
 gnutls_ocsp_resp_get_certs@GNUTLS_3_4
 gnutls_ocsp_resp_get_extension@GNUTLS_3_4
@@ -304,15 +303,15 @@ gnutls_ocsp_resp_get_signature_algorithm@GNUTLS_3_4
 gnutls_ocsp_resp_get_single@GNUTLS_3_4
 gnutls_ocsp_resp_get_status@GNUTLS_3_4
 gnutls_ocsp_resp_get_version@GNUTLS_3_4
-gnutls_ocsp_resp_import2@GNUTLS_3_6_xx
+gnutls_ocsp_resp_import2@GNUTLS_3_6_3
 gnutls_ocsp_resp_import@GNUTLS_3_4
 gnutls_ocsp_resp_init@GNUTLS_3_4
-gnutls_ocsp_resp_list_import2@GNUTLS_3_6_xx
+gnutls_ocsp_resp_list_import2@GNUTLS_3_6_3
 gnutls_ocsp_resp_print@GNUTLS_3_4
 gnutls_ocsp_resp_verify@GNUTLS_3_4
 gnutls_ocsp_resp_verify_direct@GNUTLS_3_4
 gnutls_ocsp_status_request_enable_client@GNUTLS_3_4
-gnutls_ocsp_status_request_get2@GNUTLS_3_6_xx
+gnutls_ocsp_status_request_get2@GNUTLS_3_6_3
 gnutls_ocsp_status_request_get@GNUTLS_3_4
 gnutls_ocsp_status_request_is_checked@GNUTLS_3_4
 gnutls_oid_to_digest@GNUTLS_3_4
@@ -648,7 +647,7 @@ gnutls_pubkey_verify_params@GNUTLS_3_4
 gnutls_random_art@GNUTLS_3_4
 gnutls_range_split@GNUTLS_3_4
 gnutls_realloc@GNUTLS_3_4
-gnutls_reauth@GNUTLS_3_6_xx
+gnutls_reauth@GNUTLS_3_6_3
 gnutls_record_can_use_length_hiding@GNUTLS_3_4
 gnutls_record_check_corked@GNUTLS_3_4
 gnutls_record_check_pending@GNUTLS_3_4
@@ -663,7 +662,7 @@ gnutls_record_overhead_size@GNUTLS_3_4
 gnutls_record_recv@GNUTLS_3_4
 gnutls_record_recv_packet@GNUTLS_3_4
 gnutls_record_recv_seq@GNUTLS_3_4
-gnutls_record_send2@GNUTLS_3_6_xx
+gnutls_record_send2@GNUTLS_3_6_3
 gnutls_record_send@GNUTLS_3_4
 gnutls_record_send_range@GNUTLS_3_4
 gnutls_record_set_max_size@GNUTLS_3_4
@@ -698,7 +697,7 @@ gnutls_session_get_ptr@GNUTLS_3_4
 gnutls_session_get_random@GNUTLS_3_4
 gnutls_session_get_verify_cert_status@GNUTLS_3_4
 gnutls_session_is_resumed@GNUTLS_3_4
-gnutls_session_key_update@GNUTLS_3_6_xx
+gnutls_session_key_update@GNUTLS_3_6_3
 gnutls_session_resumption_requested@GNUTLS_3_4
 gnutls_session_set_data@GNUTLS_3_4
 gnutls_session_set_id@GNUTLS_3_4
